--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
         </div>
         <hr class="horizontal dark mt-0">
         <div class="collapse navbar-collapse w-auto h-auto ps">
-            <ul class="navbar-nav" id="sidenav-collapse-main">
+            <ul data-menu="menu" class="navbar-nav" id="sidenav-collapse-main">
             </ul>
 
         </div>
