--- a/TrinhTest/Views/Pages/Chat/ChatBots.cshtml
+++ b/TrinhTest/Views/Pages/Chat/ChatBots.cshtml
@@ -4,10 +4,7 @@
 @{
     Layout = null;
 }
-
-<script src="./js/comon/initialize_setting.js"></script>
-<script src="./js/Common/Chat.js"></script>
-<script src="/Assests/js/ajax.js"></script>
+@Html.AntiForgeryToken()
 <div class="container-fluid py-3 px-0">
     <div class="row">
         <div class="col-md-4">
@@ -105,6 +102,9 @@
         </div>
     </div>
 </div>
+<script src="./js/comon/initialize_setting.js"></script>
+<script src="./js/Common/Chat.js"></script>
+<script src="./Assests/js/ajax.js"></script>
 <script type="text/javascript">
         var data;
         $(document).ready(function () {
@@ -334,7 +334,6 @@
                     data=value.filter(function(value, n, arr) {
                         return n != index;
                     });
-                    console.log(data);
                     deleteDataItemMessagerUser(data);
                     RenderDataItemMessages(data,"ChatItemUsers");
                 });
