--- a/TrinhTest/Views/_ViewStart.cshtml
+++ b/TrinhTest/Views/_ViewStart.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
     Layout = "_Layout";
-    ViewData["SessionData"] = "3453534534543";
+    ViewData["NAME"] ="Trinh 1";
+    ViewData["Flags"] = 1;
 }
