--- a/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Views/Pages/Dash/Dash_Master.cshtml
@@ -1,8 +1,4 @@
-﻿@page
-@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-@Html.AntiForgeryToken()
+﻿@Html.AntiForgeryToken()
 <div class="container-fluid py-4" id="divMainSettingDetail">
     <div class="row">
         <div class="col-12 position-relative z-index-2">
@@ -116,7 +112,7 @@
 <script src="./Assets/js/plugins/threejs.js"></script>
 <script src="./Assets/js/plugins/orbit-controls.js"></script>
 <script src="./js/Common/initialize_setting.js"></script>
-        <script type="text/javascript">
+<script type="text/javascript">
     var MasterDataMenu = [
           {
               "Name":"Dashboards"
@@ -125,17 +121,17 @@
                   {"Name":"Role"
                     ,"ChildNode":[]
                     ,"Img":""
-                    ,"Url":"/Dash/EditMater"
+                    ,"Url":"/EditRole"
                   }
                   ,{"Name":"EditRole"
                     ,"ChildNode":[]
                     ,"Img":""
-                    ,"Url":"/Dash/EditRole"
+                    ,"Url":"/EditRole"
                   },
                   {"Name":"Chats"
                     ,"ChildNode":[]
                     ,"Img":""
-                    ,"Url":"/Dash/ChatBots"
+                    ,"Url":"/ChatBots"
                   }
               ]
           },
@@ -146,7 +142,7 @@
                   {"Name":"Chats"
                     ,"ChildNode":[]
                     ,"Img":""
-                    ,"Url":"/Dash/ChatBots"
+                    ,"Url":"/ChatBots"
                   }
                   ,{"Name":"Calendar Schedule"
                     ,"ChildNode":[]
@@ -379,8 +375,6 @@
         CloseMneuMater();
         LoadDataUser();
        LoadMenuMater("sidenav-collapse-main");
-        $("#Layout_EditUser").addClass('active');
-         $("#Dashboards").addClass('show');
          eleClickMenuDash();
         LoadDataPriceServices();
         LoadTempMedicineReport();
@@ -407,10 +401,27 @@
     }
      // execute click child node menu dash
     function eleClickMenuDash(){
+         $("#collapse_Dashboards").addClass('show');
+         //$("#parent_Dashboards").children(0).addClass('bg-gradient-light');
+         $("#parent_Dashboards").children()[0].classList.add('bg-gradient-light');
+        var ele=document.querySelectorAll('.settingCollapse');
+        ele.forEach((node) => {
+            node.addEventListener("click", e => {
+            if($("#collapse_"+e.target.children[1].innerText).hasClass("show")){
+                $("#collapse_"+e.target.children[1].innerText).removeClass("show");
+                document.getElementById(e.target.id).setAttribute("aria-expanded", false);
+                e.target.querySelector('div').classList.remove("bg-gradient-light");
+            }
+            else{
+                document.getElementById(e.target.id).setAttribute("aria-expanded", true);
+                $("#collapse_"+e.target.children[1].innerText).addClass("show");
+                e.target.querySelector('div').classList.add("bg-gradient-light");
+            }
+            })
+        });
         $('#sidenav-collapse-main').on('click', '.Settingitem__item', function (e) {
                 e.preventDefault();
                 $('#sidenav-collapse-main .Settingitem__item').removeClass('active');
-                $('#sidenav-collapse-main .settingCollapse').removeClass('active');
                 let namechild = '', namegroup = '';
                 namechild = $(this).attr("data-name");
                 $(this).addClass('active');
@@ -462,13 +473,12 @@
             if(item.child.length >0){
                 replaceDataCollapse='data-bs-toggle="collapse" aria-controls='+item.Name+' role="button" aria-expanded="false"'
             }
-            let tr ='<li class="nav-item">'
-                    +'<a '+replaceDataCollapse+' href="#" id="'+item.Name+'collapse" class="nav-link cursor-pointer settingCollapse">'
+            let tr ='<li class="nav-item settingCollapse">'
+                    +'<a '+replaceDataCollapse+' href="#" id="parent_'+item.Name+'" class="nav-link cursor-pointer">'
                     +'<div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center d-flex align-items-center justify-content-center me-2">'
                     +'<i class="'+item.Img+' text-secondary"></i>'
                     +'</div>'
-                    +'<span class="">'+item.Name
-                    +'</span>'
+                    +'<span class="text-dark">'+item.Name+'</span>'
                     +'</a>'
                     + LoadChildMasterMenu(item.child,item.Name)
                     +'</li>';
@@ -479,7 +489,7 @@
     function LoadChildMasterMenu(dataChild,id){
         let resulf  = '';
         if(dataChild.length >0){
-            let tr ='<div class="collapse" id='+id+'>'
+            let tr ='<div class="collapse" id=collapse_'+id+'>'
                      +'<ul class="nav ms-2 ps-3 me-2">'
             for(let i=0;i<dataChild.length;i++){
                  let coll='';
@@ -498,13 +508,6 @@
         }
         return resulf;
     }
-    function removeActive(element){
-        element.forEach((node) => {
-            if(node.children[0].classList.contains('active')){
-                node.children[0].classList.remove('active');
-            };
-        });
-    };
     function ShowMenuMater(){
         if (iconNavbarSidenav) {
             iconNavbarSidenav.addEventListener("click", toggleSidenav);
@@ -549,7 +552,7 @@
 </script>
 <style>
     .navbar-vertical .navbar-nav .nav-link[data-bs-toggle=collapse][aria-expanded=true]:after {
-        color: #3a416f;
+        color: #67748e;
         transform: rotate(180deg);
     }
 
