--- a/TrinhTest/Views/Pages/Login/Login.cshtml
+++ b/TrinhTest/Views/Pages/Login/Login.cshtml
@@ -154,12 +154,11 @@
 <script src="./Assets/js/plugins/orbit-controls.js"></script>
 <script src="./js/Common/globe.js"></script>
 <script type="text/javascript">
-    var userId=localStorage.getItem("X-UserID");
+    let userId=localStorage.getItem("X-UserID");
      var Token =localStorage.getItem("X-Access-Token");
     $(document).ready(function () {
         document.getElementById('LoginGoogle').addEventListener("click", ClickLoginGoogle);
         showTextPassWord();
-        console.log(Token.length)
         if(userId !=null && Token.length>10){
             Login_ValidateToken();
         }
@@ -214,17 +213,20 @@
                ,PublicKey:"trytry"
             })
             ,async = true
-            , error = function () { }
+            , error = function () {notiError_SW() }
             , success = function (result) {
             }
             , before = function (e) {
                 let data=JSON.parse(e.responseText);
-                if(data != null){
-                        window.location.href="@Url.Action("DashBoards", "Home")"+"?code="+data.token+"&CurrentID="+window.btoa(userId);;
-                    }
-                    else{
-                        validateLogin()
-                    }
+                if(data != null)
+                {
+                    notiSuccess();
+                    window.location.href="@Url.Action("DashBoards", "Home")"+"?CurrentID="+window.btoa(userId);
+                }
+                else
+                {
+                    validateLogin();
+                }
              }
         );
     };
@@ -248,8 +250,6 @@
             ,async = true
             , error = function () { notiError_SW() }
             , success = function (result) {
-                console.log('result')
-                console.log(result)
             }
             , before = function (e) {
                  $('#loader').show();
