--- a/TrinhTest/Views/Shared/_Layout.cshtml
+++ b/TrinhTest/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
     <script>css_require("/Assests/Error/css/style.css")</script>
     <script>css_require("/Assests/dist/css/scrollbar.css")</script>
     <script src="/Assets/js/core/bootstrap.js"></script>
+    <script src="./js/Common/KeepAlive.js"></script>
     <script src="./js/Common/Popup.js"></script>
     <script src="./js/Common/Datetime.js"></script>
     <script src="./js/Common/noti_function.js"></script>
