--- a/TrinhTest/Pages/Dash/Dash_Master.cshtml
+++ b/TrinhTest/Pages/Dash/Dash_Master.cshtml
@@ -1,4 +1,7 @@
-﻿@Html.AntiForgeryToken()
+﻿@{
+    Layout = null;
+}
+@Html.AntiForgeryToken()
 <div class="container-fluid py-4" id="divMainSettingDetail">
     <div class="row">
         <div class="col-12 position-relative z-index-2">
