--- a/TrinhTest/Pages/Products/Products.cshtml
+++ b/TrinhTest/Pages/Products/Products.cshtml
@@ -110,8 +110,8 @@
         </div>
     </div>
 </div>
-<script src="./Assests/dist/UploadJS/js/main.js"></script>
-<script src="./js/Common/initialize_setting.js"></script>
+<script src="/Assests/dist/UploadJS/js/main.js"></script>
+<script src="/js/Common/initialize_setting.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
 
