--- a/TrinhTest/Pages/Shared/_Layout_Login.cshtml
+++ b/TrinhTest/Pages/Shared/_Layout_Login.cshtml
@@ -8,8 +8,8 @@
         const VDMINIFY = "true";
         const VDVERSION = "6.0";
     </script>
-    <link href='./Assets/css/soft-ui-dashboard.css' rel="stylesheet" />
-    <script src="./js/Preload/preload.js"></script>
+    <link href='/Assets/css/soft-ui-dashboard.css' rel="stylesheet" />
+    <script src="/js/Preload/preload.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="/js/Preload/basket.min.js"></script>
@@ -21,8 +21,9 @@
     <link href="/css/master1.css" rel="stylesheet" />
     <script src="/Assets/js/core/bootstrap.js"></script>
     <script src="/js/Common/Popup.js"></script>
-    <script src="./js/Common/Datetime.js"></script>
-    <script src="./js/Common/noti_function.js"></script>
+    <script src="/js/Common/Datetime.js"></script>
+    <script src="/js/Common/noti_function.js"></script>
+    <script src="/Assests/js/ajax.js"></script>
 </head>
 <body>
     <div class="modal" id="DetailModal" data-bs-backdrop="static">
