--- a/TrinhTest/Pages/Chat/ChatBots.cshtml
+++ b/TrinhTest/Pages/Chat/ChatBots.cshtml
@@ -1,10 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@page
 @{
     Layout = null;
 }
 @Html.AntiForgeryToken()
+<script src="/js/Common/initialize_setting.js"></script>
 <div class="container-fluid py-3 px-0">
     <div class="row">
         <div class="col-md-4">
@@ -102,9 +101,6 @@
         </div>
     </div>
 </div>
-<script src="./js/comon/initialize_setting.js"></script>
-<script src="./js/Common/Chat.js"></script>
-<script src="./Assests/js/ajax.js"></script>
 <script type="text/javascript">
         var data;
         $(document).ready(function () {
