--- a/TrinhTest/Pages/Setting/PriceServices/SettingPriceServices.cshtml
+++ b/TrinhTest/Pages/Setting/PriceServices/SettingPriceServices.cshtml
@@ -1,10 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@page
 @{
     Layout = null;
 }
-<script src="./js/Common/initialize_setting.js"></script>
+@Html.AntiForgeryToken()
+<script src="/js/Common/initialize_setting.js"></script>
 <div class="container-fluid py-3 px-0">
     <div class="row">
         <div class="col-12">
