--- a/TrinhTest/Pages/Setting/PriceServices/SettingPriceServicesDetails.cshtml
+++ b/TrinhTest/Pages/Setting/PriceServices/SettingPriceServicesDetails.cshtml
@@ -1,9 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@page
 @{
     Layout = null;
 }
+@Html.AntiForgeryToken()
 <div class="container-fluid py-3 px-0">
     <div class="row">
         <div class="col-12">
