--- a/TrinhTest/Pages/Shared/_Layout.cshtml
+++ b/TrinhTest/Pages/Shared/_Layout.cshtml
@@ -11,41 +11,32 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrinhTest</title>
-    <link href='./Assets/css/soft-ui-dashboard.css' rel="stylesheet" />
-    <link href='./css/root_element_grid.css' rel="stylesheet" />
-    <link href='./css/root_element_color.css' rel="stylesheet" />
-    <script href='./Assets/scss/soft-ui-dashboard/plugins/pro/_datatable-extend.scss'></script>
+    <link href='/css/site.css' rel="stylesheet" />
     <script src="/js/Preload/basket.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.js"></script>
-    <script src="./js/Preload/preload.js"></script>
-    <script src="./js/Common/initialize_setting.js"></script>
+    <script src="/js/Preload/preload.js"></script>
+    <script src="/js/Common/initialize_setting.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Noto Sans' rel='stylesheet'>
     <script src="/Assests/js/ajax.min.js" type="text/javascript"></script>
-    <link href="./css/master1.css" rel="stylesheet" />
-    <script>css_require('/css/main.custom.css')</script>
+@*    <link href="/css/master1.css" rel="stylesheet" />
     <script>css_require("/css/text_editor.css")</script>
-    <script>css_require("/css/button.css")</script>
-    <script>css_require("/Assests/Error/css/style.css")</script>
-    <script>css_require("/Assests/dist/css/scrollbar.css")</script>
+    <script>css_require("/css/button.css")</script>*@
     <script src="/Assets/js/core/bootstrap.js"></script>
-    <script src="./js/Common/KeepAlive.js"></script>
-    <script src="./js/Common/Popup.js"></script>
-    <script src="./js/Common/Datetime.js"></script>
-    <script src="./js/Common/noti_function.js"></script>
-    <script src="./js/Common/countup.min.js"></script>
-    <script src="./js/Common/Common.js"></script>
-    <script src="./lib/jquery-validation/dist/semantic.min.js"></script>
-    <script src="./Assets/js/plugins/datatables.js"></script>
-    <script src='./Assests/dist/Paginationjs/paginationjs.min.js'></script>
-     <script src="../../Assets/js/plugins/chartjs.min.js"></script>
-     <link href='./Assests/dist/Paginationjs/paginationjs.min.css' rel="stylesheet" />
-     <script src="./Assests/dist/components/visibility.js"></script>
-      <script src="./Assests/dist/components/visibility.min.js"></script>
+    <script src="/js/Common/KeepAlive.js"></script>
+    <script src="/js/Common/Popup.js"></script>
+    <script src="/js/Common/Datetime.js"></script>
+    <script src="/js/Common/noti_function.js"></script>
+    <script src="/js/Common/countup.min.js"></script>
+    <script src="/js/Common/Common.js"></script>
+    <script src="/lib/jquery-validation/dist/semantic.min.js"></script>
+    <script src="/Assets/js/plugins/datatables.js"></script>
+    <script src='/Assests/dist/Paginationjs/paginationjs.min.js'></script>
+     <script src="/Assets/js/plugins/chartjs.min.js"></script>
+     <script src="/Assests/dist/components/visibility.js"></script>
+      <script src="/Assests/dist/components/visibility.min.js"></script>
 </head>
 <body class="g-sidenav-show bg-gray-100 " id="BodyMain">
     <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 ps ps--active-y ps--collapsing-y" id="sidenav-main">
@@ -64,7 +55,7 @@
         </div>
         <div class="sidenav-footer mx-3 mt-3 pt-3">
             <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
-                <div class="full-background" style="background-image: url('../../assets/img/curved-images/white-curved.jpg')"></div>
+                <div class="full-background" style="background-image: url('Assets/img/curved-images/white-curved.jpg')"></div>
                 <div class="card-body text-start p-3 w-100">
                     <div class="icon icon-shape icon-sm bg-white shadow text-center mb-3 d-flex align-items-center justify-content-center border-radius-md">
                         <i class="ni ni-diamond text-dark text-gradient text-lg top-0" aria-hidden="true" id="sidenavCardIcon"></i>
@@ -115,7 +106,7 @@
                                     <a class="dropdown-item border-radius-md" href="javascript:;">
                                         <div class="d-flex py-1">
                                             <div class="my-auto">
-                                                <img src="./Assets/img/icons/flags/japan-48.png" class="avatar avatar-sm  me-3 " alt="user image">
+                                                <img src="/Assets/img/icons/flags/japan-48.png" class="avatar avatar-sm  me-3 " alt="user image">
                                             </div>
                                             <h6 class="text-sm font-weight-normal mb-1">
                                                 <span class="font-weight-bold">JanPan</span>
@@ -127,7 +118,7 @@
                                     <a class="dropdown-item border-radius-md" href="javascript:;">
                                         <div class="d-flex py-1">
                                             <div class="my-auto">
-                                                <img src="./Assets/img/icons/flags/vietnam.png" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
+                                                <img src="/Assets/img/icons/flags/vietnam.png" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
                                             </div>
                                             <h6 class="text-sm font-weight-normal mb-1">
                                                 <span class="font-weight-bold">VietNam</span> 
@@ -139,7 +130,7 @@
                                     <a class="dropdown-item border-radius-md" href="javascript:;">
                                         <div class="d-flex py-1">
                                             <div class="my-auto">
-                                                <img src="./Assets/img/icons/flags/US.png" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
+                                                <img src="/Assets/img/icons/flags/US.png" class="avatar avatar-sm bg-gradient-dark  me-3 " alt="logo spotify">
                                             </div>
                                             <h6 class="text-sm font-weight-normal mb-1">
                                                 <span class="font-weight-bold">US-UK</span>
@@ -207,17 +198,17 @@
         <div class="position-fixed bottom-1 end-1 z-index-2" id="MS_Notification">
         </div>
         @await RenderSectionAsync("Scripts", required: false)
-        <script src="./Assests/dist/signalr/dist/browser/signalr.js"></script>
+        <script src="/Assests/dist/signalr/dist/browser/signalr.js"></script>
         <script src="/js/Common/LoadLanguages_Packege.js"></script>
-         <script src="./Assests/dist/components/visibility.js"></script>
-      <script src="./Assests/dist/components/visibility.min.js"></script>
+         <script src="/Assests/dist/components/visibility.js"></script>
+      <script src="/Assests/dist/components/visibility.min.js"></script>
 <script>
     document.getElementById("LogOutUser").addEventListener("click",ClickLogOutUser);
     function ClickLogOutUser(){
         localStorage.removeItem("X-UserID");
         localStorage.removeItem("X-Access-Token");
         localStorage.removeItem("X-PublicKey");
-        var urlPath=window.location.href.replace(window.location.pathname,("@Url.Action("Login","Home")" + "?first=1&ver=" + (new Date().getTime())));
+        var urlPath=window.location.href.replace(window.location.pathname,("/Login/Login" + "?first=1&ver=" + (new Date().getTime())));
         window.history.pushState('urlPath','Title', urlPath);
         window.location.reload();
     }
